# obfCoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.cpp  key.txt  obfCoder.sln
GUI/: Encryption.cpp  Encryption.h  Functions.h  GUI.cpp  GUI.h  GUI.ui  GUI.vcxproj  GUI.vcxproj.filters  Junker.cpp  Junker.h  Parser.cpp  Parser.h  Settings.cpp  Settings.h  TPM.cpp  TPM.h  TPM_Key.txt  TpmConfig.h  decryptFile.cpp  default.cpp  key.txt  main.cpp  test.txt
GUI/examples/DFT/: key.txt
GUI/examples/DrzewoBST/: DrzewoBST.cpp  DrzewoBSTWithEnc.cpp
GUI/examples/EliminacjaGaussa/: EliminacjaGaussa.cpp  EliminacjaGaussaWithoutEnc.cpp  key.txt
GUI/examples/Experiments/: PostSurvey.docx
GUI/examples/KolkoKrzyzyk/: default.cpp
GUI/examples/KopiecBinarny/: key.txt
GUI/examples/Simplex/: SimplexWithoutEnc.cpp
GUI/include/: Helpers.h  TpmDevice.h  TpmHelpers.h  TpmMarshal.h  TpmPolicy.h  Tss.h
GUI/przyklady/DFT/: DFT.cpp  DFTWithoutEnc.cpp
GUI/przyklady/DrzewoBST/: DrzewoBSTWithoutEnc.cpp
GUI/przyklady/EliminacjaGaussa/: EliminacjaGaussaWithEnc.cpp
GUI/przyklady/KolkoKrzyzyk/: key.txt  kolkokrzyzyk.cpp  kolkokrzyzykWithoutEnc.cpp
GUI/przyklady/KopiecBinarny/: binaryHeapWithEnc.cpp  default.cpp
GUI/przyklady/Simplex/: Simplex.cpp  simplex.txt
Google Unit Tests/: Google Unit Tests.vcxproj  test.cpp  test_document.cpp
cmake/: windeployqt.cmake
inc/: Comments.h  Component.h  Encryption.h  Enters.h  FileHandling.h  Functions.h  GUI.h  GUI.ui  Junker.h  Looper.h  Manager.h  Parser.h  Renamer.h  Settings.h  Spaces.h
src/: Comments.cpp  Encryption.cpp  Enters.cpp  FileHandling.cpp  GUI.cpp  Junker.cpp  Looper.cpp  Manager.cpp  Parser.cpp  Renamer.cpp  Settings.cpp  Spaces.cpp  main.cpp
(+74 files in other folders)
